--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
     <version>1.0-SNAPSHOT</version>
 
 
-
     <!-- 继承说明：这里继承SpringBoot提供的父工程 -->
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -31,8 +30,14 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <!--统一管理jar包和版本-->
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+    </properties>
+
+    <!--统一管理jar包和版本-->
+    <!--<properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -42,60 +47,60 @@
         <mysql.version>8.0.18</mysql.version>
         <druid.verison>1.1.16</druid.verison>
         <mybatis.spring.boot.verison>1.3.0</mybatis.spring.boot.verison>
-    </properties>
+    </properties>-->
 
-    <dependencyManagement>
+    <!--<dependencyManagement>
         <dependencies>
-            <!--spring boot 2.2.2-->
+            &lt;!&ndash;spring boot 2.2.2&ndash;&gt;
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>2.2.2.RELEASE</version>
             </dependency>
-            <!--spring cloud alibaba 2.1.0.RELEASE-->
-            <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>2.2.0.RELEASE</version>
-            </dependency>
-            <!-- MySql -->
+
+            &lt;!&ndash; MySql &ndash;&gt;
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
             </dependency>
-            <!-- Druid -->
+            &lt;!&ndash; Druid &ndash;&gt;
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
-                <version>${druid.verison}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-logging</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
-            <!-- mybatis-springboot整合 -->
+            &lt;!&ndash; mybatis-springboot整合 &ndash;&gt;
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis.spring.boot.verison}</version>
             </dependency>
-            <!--lombok-->
+            &lt;!&ndash;lombok&ndash;&gt;
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
             </dependency>
-            <!--junit-->
+            &lt;!&ndash;junit&ndash;&gt;
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
             </dependency>
-            <!-- log4j -->
+            &lt;!&ndash; log4j &ndash;&gt;
             <dependency>
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
                 <version>${log4j.version}</version>
             </dependency>
         </dependencies>
-    </dependencyManagement>
+    </dependencyManagement>-->
 
     <!-- 环境切换配置. 如果有几百个子工程,每个工程所需的环境都不一样,就需要单独进行配置. 右边Maven Profiles进行选择当前的环境 -->
     <profiles>
