替换mybatis自动生成插件 使用easycode

--- a/general_service/pom.xml
+++ b/general_service/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
 
         <dependency>
-            <artifactId>general_mapper</artifactId>
+            <artifactId>general_dao</artifactId>
             <groupId>com.example</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
