--- a/general_api/src/main/resources/application.yml
+++ b/general_api/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://129.28.169.156:3306/myDataBase?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    url: jdbc:mysql://129.28.169.156:3306/myDataBase?useSSL=false&useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     username: Ryan
     password: root
     type: com.alibaba.druid.pool.DruidDataSource
@@ -70,7 +70,6 @@ spring:
 #    timeout: 300
 mybatis:
   mapper-locations: classpath:mappers/*.xml
-  # 虽然可以配置这项来进行pojo包扫描，但其实我更倾向于在mapper.xml写全类名
   type-aliases-package: com.example.entity
 
 #mybatis日志
