--- a/general_config/src/main/resources/config.properties
+++ b/general_config/src/main/resources/config.properties
@@ -9,20 +9,25 @@ refreshTokenExpireTime=1800
 # Shiro缓存过期时间-5分钟-5*60(秒为单位)(一般设置与AccessToken过期时间一致)
 shiroCacheExpireTime=300
 
+
+#redis配置开始
+# Redis数据库索引（默认为0）
+spring.redis.database=0
 # Redis服务器地址
-redis.host=129.28.169.156
+spring.redis.host=localhost
 # Redis服务器连接端口
-redis.port=6379
+spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
-redis.password=root
-# 连接超时时间（毫秒）
-redis.timeout=10000
+spring.redis.password=
 # 连接池最大连接数（使用负值表示没有限制）
-redis.pool.max-active=200
+spring.redis.jedis.pool.max-active=10000
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
-redis.pool.max-wait=-1
+spring.redis.jedis.pool.max-wait=-1
 # 连接池中的最大空闲连接
-redis.pool.max-idle=8
+spring.redis.jedis.pool.max-idle=1000
 # 连接池中的最小空闲连接
-redis.pool.min-idle=0
-? 2020 GitHub, Inc.
+spring.redis.jedis.pool.min-idle=2
+# 连接超时时间（毫秒）
+spring.redis.timeout=1000
+#redis配置结束
+spring.redis.block-when-exhausted=true
