--- a/general_api/src/main/resources/application.yml
+++ b/general_api/src/main/resources/application.yml
@@ -3,8 +3,8 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://129.28.169.156:3306/myDataBase?useSSL=false&useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-    username: Ryan
+    url: jdbc:mysql://localhost:3306/mydataBase?useSSL=false&useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    username: root
     password: root
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.jdbc.Driver
@@ -51,16 +51,32 @@ spring:
       max-file-size:  10MB
       # 设置总上传的文件大小
       max-request-size:  20MB
-  # 服务模块
+  # 热部署
   devtools:
     restart:
       # 热部署开关
-      enabled: true
+      enabled: false
+      livereload: true
+    additional-path: src/main/java
 
+  redis:
+    #host: 129.204.207.127
+    database: 2 # Redis数据库索引（默认为0）,如果设置为1，那么存入的key-value都存放在select 1中
+    host: 127.0.0.1
+    port: 6379
+    max-wait: 30000    # 连接池最大阻塞等待时间（使用负值表示没有限制）
+    max-active: 100   # 连接池最大连接数（使用负值表示没有限制）
+    max-idle: 20     # 连接池中的最大空闲连接
+    min-idle: 0     # 连接池中的最小空闲连接
+    timeout: 5000   # 连接超时
+      #password: 123456 # 密码,默认密码为空
+      #cluster:       # 集群配置
+    #nodes: 127.0.0.1:6381,127.0.0.1:6382,127.0.0.1:6383,127.0.0.1:6384,127.0.0.1:6385,127.0.0.1:6386
+    #max-redirects: 2  # 最大重定向次数
 
 
 mybatis:
-  mapper-locations: classpath:mappers/*.xml
+  mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.example.entity
 
 #mybatis日志
@@ -71,4 +87,6 @@ logging:
   file:
     path: logs
     name: controller.log
+
+
 
